PNG files for web validation

--- a/DG_1.ipynb
+++ b/DG_1.ipynb
@@ -15,7 +15,7 @@
     "from os import listdir\n",
     "from os.path import isfile, join\n",
     "from networkx.drawing.nx_pydot import write_dot\n",
-    "from utils import printProgressBar\n",
+    "from utils import printProgressBar, category_shortening\n",
     "\n",
     "# column number Demonette\n",
     "graph_1 = 3\n",
@@ -190,14 +190,7 @@
     "            if K.out_degree(r) > max_out_degree:\n",
     "                max_out_degree = K.out_degree(r)\n",
     "                selected_root = r\n",
-    "        return selected_root.split('_')[0]\n",
-    "    \n",
-    "def category_shortening(cat):\n",
-    "    if cat != 'Num' and cat[0] == 'N':\n",
-    "        if cat[1] == 'p':  # nom propre\n",
-    "            return 'Np'\n",
-    "        return 'N'  # nom\n",
-    "    return cat"
+    "        return selected_root.split('_')[0]"
    ]
   },
   {
@@ -397,13 +390,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def category_shortening(cat):\n",
-    "    if cat != 'Num' and cat[0] == 'N':\n",
-    "        if cat[1] == 'p':  # nom propre\n",
-    "            return 'Np'\n",
-    "        return 'N'  # nom\n",
-    "    return cat\n",
-    "\n",
     "def edge_writer(L):\n",
     "    ret_str = ''\n",
     "    edges = L.edges(data=True)\n",
@@ -511,6 +497,32 @@
     "f_summary.write(edge_writer(L)[:-2])\n",
     "f_summary.write('\\t' + words[:-2] + '\\n')  \n",
     "f_summary.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a29a410a",
+   "metadata": {},
+   "source": [
+    "Optional: convert each DOT to PDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec504791",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dot_dir = 'DG-graph'\n",
+    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
+    "if '.gitignore' in dot_files:\n",
+    "    dot_files.remove('.gitignore')\n",
+    "counter = 0\n",
+    "for dot_file in dot_files:\n",
+    "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
+    "    counter += 1\n",
+    "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
    ]
   }
  ],
