--- a/DG_2.ipynb
+++ b/DG_2.ipynb
@@ -18,7 +18,7 @@
     "from os.path import isfile, join\n",
     "from networkx.algorithms import isomorphism\n",
     "from networkx.drawing.nx_pydot import write_dot\n",
-    "from utils import printProgressBar\n",
+    "from utils import printProgressBar, category_shortening\n",
     "\n",
     "# glawinette column number\n",
     "lemma1 = 0\n",
@@ -70,13 +70,6 @@
    "source": [
     "def FAPconverter(input_fap):\n",
     "    return input_fap.replace('(.+)', 'X').replace('$', '').replace('^', '')\n",
-    "\n",
-    "def category_shortening(cat):\n",
-    "    if cat != 'Num' and cat[0] == 'N':\n",
-    "        if cat[1] == 'p':  # nom propre\n",
-    "            return 'Np'\n",
-    "        return 'N'  # nom\n",
-    "    return cat\n",
     "\n",
     "header = ''\n",
     "glawi_dict = dict()\n",
@@ -257,7 +250,7 @@
     "#         continue\n",
     "    if counter % 1000 == 0 and counter > 0:\n",
     "        context.index = input_files\n",
-    "        context.to_csv(join(context_folder, 'DG-context-' + str(counter/1000) + '.csv'))\n",
+    "        context.to_csv(join(context_folder, 'DG_context_' + str(counter/1000) + '.csv'))\n",
     "        context = pd.DataFrame()\n",
     "    G2 = pickle.load(open(join(input_dir, subgraph), 'rb'))\n",
     "    G2_node_count = node_count_dict.get(subgraph)\n",
@@ -292,7 +285,7 @@
     "    membership = pd.Series(membership, name=subgroup_id.replace('F', 'G'))\n",
     "    context = pd.concat([context, membership], axis=1)\n",
     "context.index = input_files\n",
-    "context.to_csv(join(context_folder, 'DG-context-last.csv'))"
+    "context.to_csv(join(context_folder, 'DG_context_last.csv'))"
    ]
   },
   {
@@ -327,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_join.to_csv('DG-context.csv')"
+    "context_join.to_csv('DG_context.csv')"
    ]
   },
   {
@@ -345,8 +338,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_without_header = 'context_without_header.csv'\n",
-    "context_with_header = pd.read_csv('DG-context.csv', header=0, index_col=0)\n",
+    "context_without_header = 'DG_context_without_header.csv'\n",
+    "context_with_header = pd.read_csv('DG_context.csv', header=0, index_col=0)\n",
     "context_with_header.to_csv(context_without_header, header=False, index=False)"
    ]
   },
@@ -357,10 +350,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d DG-posets/aoc-simplified.dot -f SIMPLIFIED -z')\n",
-    "#os.system('dot -Tpdf posets/families_simplified.dot -o posets/families_simplified.pdf')\n",
-    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d DG-posets/aoc-full.dot -f FULL -z')\n",
-    "#os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d posets/families_minimal.dot -f MINIMAL')"
+    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d ' + join('DG-posets', 'aoc_simplified.dot') + ' -f SIMPLIFIED -z')\n",
+    "os.system('dot -Tpdf ' + join('DG-posets', 'aoc_simplified.dot') + ' -o ' + join('DG-posets', 'aoc_simplified.pdf'))\n",
+    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d ' + join('DG-posets', 'aoc_full.dot') + ' -f FULL -z')\n",
+    "os.system('dot -Tpdf ' + join('DG-posets', 'aoc_full.dot') + ' -o ' + join('DG-posets', 'aoc_full.pdf'))"
    ]
   },
   {
@@ -378,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_with_header = pd.read_csv('DG-context.csv', header=0, index_col=0)\n",
+    "context_with_header = pd.read_csv('DG_context.csv', header=0, index_col=0)\n",
     "col_names = context_with_header.columns\n",
     "family_ids = context_with_header.index\n",
     "\n",
@@ -398,8 +391,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_dot = 'aoc-full.dot'\n",
-    "simplified_dot = 'aoc-simplified.dot'\n",
+    "full_dot = 'aoc_full.dot'\n",
+    "simplified_dot = 'aoc_simplified.dot'\n",
     "directory = 'DG-posets'\n",
     "out_directory = 'DG-subposets'\n",
     "L1 = nx.DiGraph()\n",
@@ -490,6 +483,32 @@
     "    out_file.close()\n",
     "    counter += 1\n",
     "    print(group_id, end='\\r')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "506bb65b",
+   "metadata": {},
+   "source": [
+    "Optional: convert each DOT to PDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73827078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dot_dir = 'DG-subposets'\n",
+    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
+    "if '.gitignore' in dot_files:\n",
+    "    dot_files.remove('.gitignore')\n",
+    "counter = 0\n",
+    "for dot_file in dot_files:\n",
+    "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
+    "    counter += 1\n",
+    "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
    ]
   }
  ],
