--- a/D_1.ipynb
+++ b/D_1.ipynb
@@ -15,7 +15,7 @@
     "from os import listdir\n",
     "from os.path import isfile, join\n",
     "from networkx.drawing.nx_pydot import write_dot\n",
-    "from utils import printProgressBar"
+    "from utils import printProgressBar, category_shortening"
    ]
   },
   {
@@ -124,14 +124,7 @@
     "            if K.out_degree(r) > max_out_degree:\n",
     "                max_out_degree = K.out_degree(r)\n",
     "                selected_root = r\n",
-    "        return selected_root.split('_')[0]\n",
-    "    \n",
-    "def category_shortening(cat):\n",
-    "    if cat != 'Num' and cat[0] == 'N':\n",
-    "        if cat[1] == 'p':  # nom propre\n",
-    "            return 'Np'\n",
-    "        return 'N'  # nom\n",
-    "    return cat"
+    "        return selected_root.split('_')[0]"
    ]
   },
   {
@@ -312,7 +305,7 @@
    "id": "415b8379",
    "metadata": {},
    "source": [
-    "# 2. Generate graphs (.dot files)"
+    "# 2. Generate graph visualization"
    ]
   },
   {
@@ -322,13 +315,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def category_shortening(cat):\n",
-    "    if cat != 'Num' and cat[0] == 'N':\n",
-    "        if cat[1] == 'p':  # nom propre\n",
-    "            return 'Np'\n",
-    "        return 'N'  # nom\n",
-    "    return cat\n",
-    "\n",
     "def edge_writer(H):\n",
     "    ret_str = ''\n",
     "    edges = H.edges(data=True)\n",
@@ -430,9 +416,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df49a926",
+   "metadata": {},
+   "source": [
+    "Optional: convert each DOT to PDF"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4051ccd",
+   "id": "5b86d595",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dot_dir = 'D-graph'\n",
+    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
+    "if '.gitignore' in dot_files:\n",
+    "    dot_files.remove('.gitignore')\n",
+    "counter = 0\n",
+    "for dot_file in dot_files:\n",
+    "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
+    "    counter += 1\n",
+    "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4653975",
    "metadata": {},
    "outputs": [],
    "source": []
