--- a/D_3.ipynb
+++ b/D_3.ipynb
@@ -3,7 +3,415 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "147ec04e",
+   "id": "b99543eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import codecs\n",
+    "import networkx as nx\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import re\n",
+    "from difflib import SequenceMatcher\n",
+    "from networkx.algorithms import isomorphism\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
+    "from utils import printProgressBar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd69cc2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequencies = pd.read_csv('frequencies-frcowvec.csv', header=0, index_col=0)\n",
+    "frequencies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec275bb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_filenames = [f for f in listdir('D-graph') if isfile(join('D-graph', f))]\n",
+    "if '.gitignore' in graph_filenames:\n",
+    "    graph_filenames.remove('.gitignore')\n",
+    "graph_binary_filenames  = [f for f in listdir('D-graph-binary') if isfile(join('D-graph-binary', f))]\n",
+    "if '.gitignore' in graph_binary_filenames:\n",
+    "    graph_binary_filenames.remove('.gitignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e9e2ba2",
+   "metadata": {},
+   "source": [
+    "# 1. Detection of missing derivations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "391e69d8",
+   "metadata": {},
+   "source": [
+    "Lattice reconstruction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37fc7b6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_extent_dict = dict()\n",
+    "with codecs.open(join('D-posets', 'aoc-full.dot'), 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        if 'Attribute' in line:\n",
+    "            full_extent_dict[line.split()[0]] = set(line.replace('Object ', '').split('|')[-1].split('\\\\n')[:-1])\n",
+    "        elif '->' in line:\n",
+    "            break\n",
+    "            \n",
+    "L = nx.DiGraph()\n",
+    "with codecs.open(join('D-posets', 'aoc-simplified.dot'), 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        if '->' in line:\n",
+    "            v = line.split()\n",
+    "            L.add_edge(v[2], v[0])\n",
+    "        elif 'Attribute' in line:\n",
+    "            vertex_id = line.split()[0]\n",
+    "            #introduced_intent = col_names[int(line.split('|')[1].replace('Attribute ', '').replace('\\\\n', ''))]\n",
+    "            introduced_extent = line.replace('Object ', '').split('|')[-1].split('\\\\n')[:-1]\n",
+    "            extent_size = re.search('E: (.*)\\)', line).group(1)\n",
+    "            L.add_node(vertex_id, introduced_intent=int(line.split('|')[1].replace('Attribute ', '').replace('\\\\n', '')),\\\n",
+    "                       extent_size=extent_size, introduced_extent=introduced_extent,\\\n",
+    "                       concept_number=re.search('<(.*)>', line).group(1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c366ad16",
+   "metadata": {},
+   "source": [
+    "Some functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d0e5123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frcowvec_categories = {'Nm': 'NOM', 'Nf': 'NOM', 'Nmp': 'NOM', 'Nfp': 'NOM', 'Nx': 'NOM', 'More': 'NOM',\n",
+    "                       'Npm': 'NAM', 'Npf': 'NAM', 'Npx': 'NAM', 'Npmp': 'NAM', 'Npfp': 'NAM',\n",
+    "                       'IJ': 'INT', 'Adj': 'ADJ', 'V': 'VER', 'Num': 'NUM', 'Pro': 'PRO', 'Adv': 'ADV'}\n",
+    "\n",
+    "def frcowvec_cat_conversion(lexeme):\n",
+    "    old_cat = lexeme.split('_')[-1]\n",
+    "    new_cat = frcowvec_categories.get(old_cat, old_cat)\n",
+    "    return lexeme.split('_')[0] + '_' + new_cat\n",
+    "\n",
+    "def get_max_frequency(input_str):\n",
+    "    lexemes = input_str.split(', ')\n",
+    "    max_freq = 0\n",
+    "    for lexeme in lexemes:\n",
+    "        if lexeme == 'XX':\n",
+    "            continue\n",
+    "        try:\n",
+    "            freq = frequencies.loc[frcowvec_cat_conversion(lexeme)]['freq']\n",
+    "            if freq > max_freq:\n",
+    "                max_freq = freq\n",
+    "        except KeyError:\n",
+    "            pass\n",
+    "    return max_freq\n",
+    "\n",
+    "def guess_missing_lexemes(input_str):\n",
+    "    # input_str ex : \"micocoulier_Nm : micocoule_Nf = cotonéaster_Nm : ?, micocoulier_Nm : micocouleraie_Nf = cotonéaster_Nm : ?\"\n",
+    "    complete_strs = input_str.replace(' ','').split(',')\n",
+    "    ret_str = ''\n",
+    "    for complete_str in complete_strs:\n",
+    "        a1 = '{' + complete_str.split('=')[0].split(':')[0].split('_')[0] + '}'\n",
+    "        a2 = '{' + complete_str.split('=')[0].split(':')[1].split('_')[0] + '}'\n",
+    "        b1 = '{' + complete_str.split('=')[1].split(':')[0].split('_')[0] + '}'\n",
+    "        a2_cat = complete_str.split('=')[0].split(':')[1].split('_')[1]\n",
+    "        match = SequenceMatcher(None, a1, a2).find_longest_match(0, len(a1), 0, len(a2))\n",
+    "        common = a1[match.a:match.a+match.size]\n",
+    "        a1_suffix = a1.replace(common, '')\n",
+    "        a2_suffix = a2.replace(common, '')\n",
+    "        b2 = b1.replace(a1_suffix, a2_suffix)\n",
+    "        if b2 == b1 and a1 != a2:\n",
+    "            ret_str += 'XX, '\n",
+    "        else:\n",
+    "            ret_str += b2.replace('{', '').replace('}', '') + '_' + a2_cat + ', '\n",
+    "    return ret_str[:-2]\n",
+    "\n",
+    "def generate_analogy(G_parent, G_child):\n",
+    "    GM = isomorphism.DiGraphMatcher(G_child, G_parent, node_match=lambda v1,v2: v1['label'] == v2['label'], edge_match=lambda e1,e2: e1['label'] == e2['label'])\n",
+    "    node_diff = set()\n",
+    "    for subgraph in GM.subgraph_isomorphisms_iter():\n",
+    "        node_diff = G_child.nodes - subgraph\n",
+    "    ret_str = ''\n",
+    "    for n in node_diff:\n",
+    "        if len(G_child.in_edges(n)) > 0:\n",
+    "            one_origin = list(G_child.in_edges(n))[0][0]\n",
+    "            try:\n",
+    "                ret_str += one_origin + ' : ' + n + ' = ' + subgraph.get(one_origin) + ' : ?' + ', '\n",
+    "            except TypeError:\n",
+    "                pass\n",
+    "        else:\n",
+    "            one_derived = list(G_child.out_edges(n))[0][1]\n",
+    "            try:\n",
+    "                ret_str += one_derived + ' : ' + n + ' = ' + subgraph.get(one_derived) + ' : ?' + ', '\n",
+    "            except TypeError:\n",
+    "                pass\n",
+    "    return ret_str[:-2]\n",
+    "\n",
+    "def generate_analogy2(G_parent, G_sibling, G_child):\n",
+    "    GMpc = isomorphism.DiGraphMatcher(G_child, G_parent, node_match=lambda v1,v2: v1['label'] == v2['label'], edge_match=lambda e1,e2: e1['label'] == e2['label'])\n",
+    "    GMps = isomorphism.DiGraphMatcher(G_sibling, G_parent, node_match=lambda v1,v2: v1['label'] == v2['label'], edge_match=lambda e1,e2: e1['label'] == e2['label'])\n",
+    "    node_diff = set()\n",
+    "    for subgraph in GMpc.subgraph_isomorphisms_iter():\n",
+    "        node_diff = G_child.nodes - subgraph\n",
+    "    #print(subgraph)\n",
+    "    #print(node_diff)\n",
+    "    for subgraph2 in GMps.subgraph_isomorphisms_iter():\n",
+    "        pass\n",
+    "    #print(subgraph2)\n",
+    "    ret_str = ''\n",
+    "    for n in node_diff:\n",
+    "        if len(G_child.in_edges(n)) > 0:\n",
+    "            one_origin = list(G_child.in_edges(n))[0][0]\n",
+    "            for key in subgraph2:\n",
+    "                if subgraph2.get(key) == subgraph.get(one_origin):\n",
+    "                    one_origin_sibling = key\n",
+    "            #print(one_origin_sibling)\n",
+    "            ret_str += one_origin + ' : ' + n + ' = ' + one_origin_sibling + ' : ?' + ', '\n",
+    "        else:\n",
+    "            one_derived = list(G_child.out_edges(n))[0][1]\n",
+    "            for key in subgraph2:\n",
+    "                if subgraph2.get(key) == subgraph.get(one_derived):\n",
+    "                    one_derived_sibling = key\n",
+    "            #print(one_derived_sibling)\n",
+    "            ret_str += one_derived + ' : ' + n + ' = ' + one_derived_sibling + ' : ?' + ', '\n",
+    "    #print(ret_str[:-2])\n",
+    "    return ret_str[:-2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8d67f22",
+   "metadata": {},
+   "source": [
+    "Compare every pair of neighboring concepts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddca76eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertices = list(L.nodes)\n",
+    "edge_counter = 0\n",
+    "L_size = L.size()\n",
+    "binary_dir = 'D-graph-binary'\n",
+    "df_lattice = pd.DataFrame(columns=['concept_pair', 'parent_ext', 'child_ext', 'ext_ratio', 'ante_node_count',\n",
+    "                                   'cons_node_count', 'missing_node_count', 'parent', 'child', 'analogy'])\n",
+    "for vertex in vertices:\n",
+    "    #if vertex != '1567705314':\n",
+    "        #continue\n",
+    "    current_extent_size = int(L.nodes[vertex]['extent_size'])\n",
+    "    G_parent = pickle.load(open(join(binary_dir, graph_binary_filenames[int(L.nodes[vertex]['introduced_extent'][0])]), 'rb'))\n",
+    "    current_graph_len = len(G_parent)\n",
+    "    children = L.neighbors(vertex)\n",
+    "    for child in children:\n",
+    "        edge_counter += 1\n",
+    "        printProgressBar(edge_counter, L_size, prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)\n",
+    "        ext_ratio = int(L.nodes[child]['extent_size']) / current_extent_size\n",
+    "        if ext_ratio < 0.8:\n",
+    "            continue\n",
+    "        one_introduced_extent = L.nodes[child]['introduced_extent'][0]\n",
+    "        one_G_child = pickle.load(open(join(binary_dir, graph_binary_filenames[int(one_introduced_extent)]), 'rb'))\n",
+    "        child_graph_len = len(one_G_child)\n",
+    "        node_count_diff = child_graph_len - current_graph_len\n",
+    "        concept_pair = L.nodes[vertex]['concept_number'] + '-' + L.nodes[child]['concept_number']\n",
+    "        introduced_extent = set(L.nodes[vertex]['introduced_extent'])\n",
+    "        for e in introduced_extent:\n",
+    "            G_parent = pickle.load(open(join(binary_dir, graph_binary_filenames[int(e)]), 'rb'))\n",
+    "            df_lattice = df_lattice.append(pd.Series({\n",
+    "                    'parent': '=HYPERLINK(\"' + join('D-graph', graph_filenames[int(e)]) + '\", \"' + graph_filenames[int(e)] + ' **\")',\n",
+    "                    'child': '=HYPERLINK(\"' + join('D-graph', graph_filenames[int(one_introduced_extent)]) + '\", \"' + graph_filenames[int(one_introduced_extent)] + '\")',\n",
+    "                    'parent_ext': current_extent_size,\n",
+    "                    'child_ext': int(L.nodes[child]['extent_size']),\n",
+    "                    'ext_ratio': ext_ratio,\n",
+    "                    'ante_node_count': current_graph_len,\n",
+    "                    'cons_node_count': child_graph_len,\n",
+    "                    'missing_node_count': node_count_diff,\n",
+    "                    'analogy': generate_analogy(G_parent, one_G_child),\n",
+    "                    'concept_pair': concept_pair\n",
+    "                }), ignore_index=True)\n",
+    "        \n",
+    "        extent_diff = full_extent_dict[vertex] - full_extent_dict[child] - introduced_extent\n",
+    "        for e in extent_diff:\n",
+    "            G_sibling = pickle.load(open(join(binary_dir, graph_binary_filenames[int(e)]), 'rb'))\n",
+    "            df_lattice = df_lattice.append(pd.Series({\n",
+    "                    'parent': '=HYPERLINK(\"' + join('D-graph', graph_filenames[int(e)]) + '\", \"' + graph_filenames[int(e)] + '\")',\n",
+    "                    'child': '=HYPERLINK(\"' + join('D-graph', graph_filenames[int(one_introduced_extent)]) + '\", \"' + graph_filenames[int(one_introduced_extent)] + '\")',\n",
+    "                    'parent_ext': current_extent_size,\n",
+    "                    'child_ext': int(L.nodes[child]['extent_size']),\n",
+    "                    'ext_ratio': ext_ratio,\n",
+    "                    'ante_node_count': current_graph_len,\n",
+    "                    'cons_node_count': child_graph_len,\n",
+    "                    'missing_node_count': node_count_diff,\n",
+    "                    'analogy': generate_analogy2(G_parent, G_sibling, one_G_child),\n",
+    "                    'concept_pair': concept_pair \n",
+    "                }), ignore_index=True)\n",
+    "df_lattice['missing'] = df_lattice['analogy'].apply(guess_missing_lexemes)\n",
+    "df_lattice['max_frequency'] = df_lattice['missing'].apply(get_max_frequency)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e601c704",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_lattice.to_excel('D_missing_deriv.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "368b7462",
+   "metadata": {},
+   "source": [
+    "# 2. Detection of false derivations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0988823",
+   "metadata": {},
+   "source": [
+    "Lattice reconstruction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "756fb778",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = nx.DiGraph()\n",
+    "binary_dir = 'D-graph-binary'\n",
+    "with codecs.open(join('D-posets', 'aoc-simplified.dot'), 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        if '->' in line:\n",
+    "            v = line.split()\n",
+    "            L.add_edge(v[2], v[0])\n",
+    "        elif 'Attribute' in line:\n",
+    "            vertex_id = line.split()[0]\n",
+    "            #introduced_intent = col_names[int(line.split('|')[1].replace('Attribute ', '').replace('\\\\n', ''))]\n",
+    "            introduced_extent = line.replace('Object ', '').split('|')[-1].split('\\\\n')[:-1]\n",
+    "            introduced_extent_size = line.count('Object')\n",
+    "            G = pickle.load(open(join(binary_dir, graph_binary_filenames[int(introduced_extent[0])]), 'rb'))\n",
+    "            L.add_node(vertex_id, introduced_extent=introduced_extent, introduced_extent_size=introduced_extent_size,\\\n",
+    "                      concept_number=re.search('<(.*)>', line).group(1),\\\n",
+    "                      node_count=len(G))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09e43727",
+   "metadata": {},
+   "source": [
+    "Compare every pair of neighboring concepts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae3a032b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertices = list(L.nodes)\n",
+    "edge_counter = 0\n",
+    "L_size = L.size()\n",
+    "df_lattice = pd.DataFrame(columns=['concept_pair', 'parent_introduced_extent', 'child_introduced_extent',\n",
+    "                                   'introduced_extent_ratio',\n",
+    "                                   'parent_node_count', 'child_node_count', 'node_count_diff',\n",
+    "                                   'parent', 'child',\n",
+    "                                   'spurious_node', 'spurious_node_freq'])\n",
+    "for vertex in vertices:\n",
+    "#     if vertex != '1567705314':\n",
+    "#         continue\n",
+    "    current_extent_size = int(L.nodes[vertex]['introduced_extent_size'])\n",
+    "    current_graph_len = L.nodes[vertex]['node_count']\n",
+    "    children = L.neighbors(vertex)\n",
+    "    one_parent_extent = L.nodes[vertex]['introduced_extent'][0]\n",
+    "    G_parent = pickle.load(open(join(binary_dir, graph_binary_filenames[int(one_parent_extent)]), 'rb'))\n",
+    "    for child in children:\n",
+    "        edge_counter += 1\n",
+    "        printProgressBar(edge_counter, L_size, prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)\n",
+    "        node_diff = L.nodes[child]['node_count'] - current_graph_len\n",
+    "        intr_ext_ratio = int(L.nodes[child]['introduced_extent_size']) / current_extent_size\n",
+    "        if node_diff > 2 or intr_ext_ratio > 0.3:  # or L.nodes[child]['introduced_extent_size'] > 1:\n",
+    "            continue\n",
+    "        concept_pair = L.nodes[vertex]['concept_number'] + '-' + L.nodes[child]['concept_number']\n",
+    "        child_extent = L.nodes[child]['introduced_extent']\n",
+    "        for e in child_extent:\n",
+    "            G_child = pickle.load(open(join(binary_dir, graph_binary_filenames[int(e)]), 'rb'))\n",
+    "            GM = isomorphism.DiGraphMatcher(G_child, G_parent, node_match=lambda v1,v2: v1['label'] == v2['label'], edge_match=lambda e1,e2: e1['label'] == e2['label'])\n",
+    "            H = set()\n",
+    "            spurious_node = ''\n",
+    "            spurious_node_str = ''\n",
+    "            spurious_node_freq = 999999999\n",
+    "            for subgraph in GM.subgraph_isomorphisms_iter():\n",
+    "                H = G_child.nodes - subgraph\n",
+    "#                 spurious_node_temp = next(iter(H))\n",
+    "                for spurious_node_temp in iter(H):\n",
+    "                    spurious_node_str += spurious_node_temp + ', '\n",
+    "                    if G_child.nodes[spurious_node_temp]['frequency'] < spurious_node_freq:\n",
+    "                        spurious_node = spurious_node_temp\n",
+    "                        spurious_node_freq = G_child.nodes[spurious_node]['frequency']\n",
+    "                break  #  for avoiding double detection\n",
+    "            df_lattice = df_lattice.append(pd.Series({\n",
+    "                    'parent': '=HYPERLINK(\"' + join('D-graph', graph_filenames[int(one_parent_extent)]) + '\", \"' + graph_filenames[int(one_parent_extent)] + '\")',\n",
+    "                    'child': '=HYPERLINK(\"' + join('D-graph', graph_filenames[int(e)]) + '\", \"' + graph_filenames[int(e)] + '\")',\n",
+    "                    'parent_introduced_extent': current_extent_size,\n",
+    "                    'child_introduced_extent': L.nodes[child]['introduced_extent_size'],\n",
+    "                    'introduced_extent_ratio': intr_ext_ratio,\n",
+    "                    'parent_node_count': current_graph_len,\n",
+    "                    'child_node_count': L.nodes[child]['node_count'],\n",
+    "                    'node_count_diff': node_diff,\n",
+    "                    'spurious_node': spurious_node_str[:-2],\n",
+    "                    'spurious_node_freq': G_child.nodes[spurious_node]['frequency'],\n",
+    "                    'concept_pair': concept_pair\n",
+    "                }), ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1c5053b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_lattice.to_excel('D_false_deriv.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7a2cda6",
    "metadata": {},
    "outputs": [],
    "source": []
