--- a/D_2.ipynb
+++ b/D_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a08708cd",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "from os.path import isfile, join\n",
     "from networkx.algorithms import isomorphism\n",
     "from networkx.drawing.nx_pydot import write_dot\n",
-    "from utils import printProgressBar\n",
+    "from utils import printProgressBar, category_shortening\n",
     "\n",
     "# column number\n",
     "graph_1 = 3\n",
@@ -66,21 +66,6 @@
     "\n",
     "frequencies = pd.read_csv('frequencies-frcowvec.csv', header=0, index_col=0)\n",
     "frequencies.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dbe383d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def category_shortening(cat):\n",
-    "    if cat != 'Num' and cat[0] == 'N':\n",
-    "        if cat[1] == 'p':  # nom propre\n",
-    "            return 'Np'\n",
-    "        return 'N'  # nom\n",
-    "    return cat"
    ]
   },
   {
@@ -193,7 +178,7 @@
     "    counter += 1\n",
     "    if counter % 1000 == 0 and counter > 0:\n",
     "        context.index = input_files\n",
-    "        context.to_csv(join(context_folder, 'D-context-' + str(counter/1000) + '.csv'))\n",
+    "        context.to_csv(join(context_folder, 'D_context_' + str(counter/1000) + '.csv'))\n",
     "        context = pd.DataFrame()\n",
     "    G2 = pickle.load(open(join(input_dir, subgraph), 'rb'))\n",
     "    G2_node_count = node_count_dict.get(subgraph)\n",
@@ -224,7 +209,7 @@
     "    membership = pd.Series(membership, name=subgroup_id.replace('F', 'G'))\n",
     "    context = pd.concat([context, membership], axis=1)\n",
     "context.index = input_files\n",
-    "context.to_csv(join(context_folder, 'DG-context-last.csv'))"
+    "context.to_csv(join(context_folder, 'DG_context_last.csv'))"
    ]
   },
   {
@@ -259,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_join.to_csv('D-context.csv')"
+    "context_join.to_csv('D_context.csv')"
    ]
   },
   {
@@ -272,27 +257,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0211ecef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_without_header = 'context_without_header.csv'\n",
-    "context_with_header = pd.read_csv('D-context.csv', header=0, index_col=0)\n",
+    "context_without_header = 'D_context_without_header.csv'\n",
+    "context_with_header = pd.read_csv('D_context.csv', header=0, index_col=0)\n",
     "context_with_header.to_csv(context_without_header, header=False, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "979e5058",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d D-posets/aoc-simplified.dot -f SIMPLIFIED -z')\n",
-    "#os.system('dot -Tpdf posets/families_simplified.dot -o posets/families_simplified.pdf')\n",
-    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d D-posets/aoc-full.dot -f FULL -z')\n",
-    "#os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d posets/families_minimal.dot -f MINIMAL')"
+    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d ' + join('D-posets', 'aoc_simplified.dot') + ' -f SIMPLIFIED -z')\n",
+    "os.system('dot -Tpdf ' + join('D-posets', 'aoc_simplified.dot') + ' -o ' + join('D-posets', 'aoc_simplified.pdf'))\n",
+    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d ' + join('D-posets', 'aoc_full.dot') + ' -f FULL -z')\n",
+    "os.system('dot -Tpdf ' + join('D-posets', 'aoc_full.dot') + ' -o ' + join('D-posets', 'aoc_full.pdf'))"
    ]
   },
   {
@@ -310,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_with_header = pd.read_csv('D-context.csv', header=0, index_col=0)\n",
+    "context_with_header = pd.read_csv('D_context.csv', header=0, index_col=0)\n",
     "col_names = context_with_header.columns\n",
     "family_ids = context_with_header.index\n",
     "\n",
@@ -330,8 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_dot = 'aoc-full.dot'\n",
-    "simplified_dot = 'aoc-simplified.dot'\n",
+    "full_dot = 'aoc_full.dot'\n",
+    "simplified_dot = 'aoc_simplified.dot'\n",
     "directory = 'D-posets'\n",
     "out_directory = 'D-subposets'\n",
     "L1 = nx.DiGraph()\n",
@@ -425,12 +421,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "314dda30",
+   "metadata": {},
+   "source": [
+    "Optional: convert each DOT to PDF"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3a66c00",
+   "id": "86c457df",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dot_dir = 'D-subposets'\n",
+    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
+    "if '.gitignore' in dot_files:\n",
+    "    dot_files.remove('.gitignore')\n",
+    "counter = 0\n",
+    "for dot_file in dot_files:\n",
+    "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
+    "    counter += 1\n",
+    "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
+   ]
   }
  ],
  "metadata": {
