PNG files for web validation

--- a/D_1.ipynb
+++ b/D_1.ipynb
@@ -351,7 +351,7 @@
     "if '.gitignore' in input_files:\n",
     "    input_files.remove('.gitignore')\n",
     "\n",
-    "f_summary = codecs.open('D_summary_of_family_groups.txt', 'w+', encoding='utf-8')\n",
+    "f_summary = codecs.open('D_summary_of_groups.txt', 'w+', encoding='utf-8')\n",
     "f_summary.write('group id\\tnumber of lexemes\\tnumber of edges\\tnumber of families\\tedges\\tfamilies\\n')\n",
     "number_of_edges = []\n",
     "number_of_families = []\n",
