--- a/DG_1.ipynb
+++ b/DG_1.ipynb
@@ -319,9 +319,11 @@
    "id": "4f7f9777",
    "metadata": {},
    "source": [
-    "Generate csv file for each family to folder \"DG-families\", and\n",
+    "Generate csv file for each family to folder `DG-families`, and\n",
     "\n",
-    "Generate \"DG_summary_of_families.txt\" that records the list of lexemes for each family"
+    "generate `DG_summary_of_families.txt` that records the list of lexemes for each family.\n",
+    "\n",
+    "Before executing the code below, make sure that `DG-families` and `DG-graph` contains no file, except `.gitignore`."
    ]
   },
   {
