--- a/D_1.ipynb
+++ b/D_1.ipynb
@@ -244,9 +244,11 @@
    "id": "e614279d",
    "metadata": {},
    "source": [
-    "Generate csv file for each family to folder \"D-families\", and\n",
+    "Generate csv file for each family to folder `D-families`, and\n",
     "\n",
-    "Generate \"D_summary_of_families.txt\" that records the list of lexemes for each family"
+    "generate `D_summary_of_families.txt` that records the list of lexemes for each family.\n",
+    "\n",
+    "Before executing the code below, make sure that `D-families` and `D-graph` contains no file, except `.gitignore`."
    ]
   },
   {
