avoiding system files

--- a/D_1.ipynb
+++ b/D_1.ipynb
@@ -147,6 +147,8 @@
     "number_of_pairs = 0\n",
     "number_of_unique_pairs = 0\n",
     "for input_file in input_files:\n",
+    "    if '.csv' not in input_file:\n",
+    "        continue\n",
     "    with codecs.open(join(input_dir, input_file), 'r', encoding='utf-8') as f:\n",
     "        for line_num, line in enumerate(f):\n",
     "            if line_num == 0:\n",
@@ -288,6 +290,8 @@
    "outputs": [],
    "source": [
     "for input_file in input_files:\n",
+    "    if '.csv' not in input_file:\n",
+    "        continue\n",
     "    with codecs.open(join(input_dir, input_file), 'r', encoding='utf-8') as f:\n",
     "        for line_num, line in enumerate(f):\n",
     "            if line_num < 2:\n",
@@ -350,8 +354,6 @@
    "source": [
     "input_dir = 'D-families'\n",
     "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
-    "if '.gitignore' in input_files:\n",
-    "    input_files.remove('.gitignore')\n",
     "\n",
     "f_summary = codecs.open('D_summary_of_groups.txt', 'w+', encoding='utf-8')\n",
     "f_summary.write('group id\\tnumber of lexemes\\tnumber of edges\\tnumber of families\\tedges\\tfamilies\\n')\n",
@@ -363,6 +365,8 @@
     "H = nx.DiGraph()\n",
     "counter = 0\n",
     "for input_file in input_files:\n",
+    "    if '.txt' not in input_file:\n",
+    "        continue\n",
     "    group_id = input_file.split(' ')[0].split('-')[0]\n",
     "    if group_id != group_prec and group_prec != '':\n",
     "        f_summary.write(group_prec + '\\t' + str(len(H)) + '\\t' + str(H.size()) + '\\t' + str(family_count) + '\\t')\n",
@@ -434,10 +438,10 @@
    "source": [
     "dot_dir = 'D-graph'\n",
     "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
-    "if '.gitignore' in dot_files:\n",
-    "    dot_files.remove('.gitignore')\n",
     "counter = 0\n",
     "for dot_file in dot_files:\n",
+    "    if '.dot' not in dot_file:\n",
+    "        continue\n",
     "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
     "    counter += 1\n",
     "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
