--- a/D_2.ipynb
+++ b/D_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a08708cd",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,16 @@
     "complexite = 19\n",
     "orientation = 21\n",
     "fichier_origine = 43"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf41e29a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(pd.__version__)"
    ]
   },
   {
@@ -77,11 +87,11 @@
    "source": [
     "input_dir = 'D-families'\n",
     "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
-    "if '.gitignore' in input_files:\n",
-    "    input_files.remove('.gitignore')\n",
     "output_dir = 'D-graph-binary'\n",
     "\n",
     "for input_file in input_files:\n",
+    "    if '.txt' not in input_file:\n",
+    "        continue\n",
     "    fam_id = input_file.split()[0]\n",
     "    group_id = fam_id.split('-')[0]\n",
     "    H = nx.DiGraph()\n",
@@ -133,8 +143,6 @@
    "source": [
     "input_dir = 'D-graph-binary'\n",
     "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
-    "if '.gitignore' in input_files:\n",
-    "    input_files.remove('.gitignore')\n",
     "input_files.sort()\n",
     "ignored = []\n",
     "for i in ignored:\n",
@@ -172,6 +180,8 @@
     "counter = -1\n",
     "input_files_count = len(input_files)\n",
     "for subgraph in input_files:\n",
+    "    if not subgraph.startswith('F'):\n",
+    "        continue\n",
     "    subgroup_id = subgraph.split('-')[0]\n",
     "    if subgroup_id == subgroup_prev:\n",
     "        continue\n",
@@ -209,7 +219,7 @@
     "    membership = pd.Series(membership, name=subgroup_id.replace('F', 'G'))\n",
     "    context = pd.concat([context, membership], axis=1)\n",
     "context.index = input_files\n",
-    "context.to_csv(join(context_folder, 'DG_context_last.csv'))"
+    "context.to_csv(join(context_folder, 'D_context_last.csv'))"
    ]
   },
   {
@@ -257,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0211ecef",
    "metadata": {},
    "outputs": [],
@@ -269,21 +279,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "979e5058",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d ' + join('D-posets', 'aoc_simplified.dot') + ' -f SIMPLIFIED -z')\n",
     "os.system('dot -Tpdf ' + join('D-posets', 'aoc_simplified.dot') + ' -o ' + join('D-posets', 'aoc_simplified.pdf'))\n",
@@ -311,10 +310,10 @@
     "family_ids = context_with_header.index\n",
     "\n",
     "families = [f for f in listdir('D-families') if isfile(join('D-families', f))]\n",
-    "if '.gitignore' in families:\n",
-    "    families.remove('.gitignore')\n",
     "families_dict = dict()  # contains the representative word for a given family\n",
     "for f in families:\n",
+    "    if not f.startswith('F'):\n",
+    "        continue\n",
     "    elements = f.replace('.txt', '').split()\n",
     "    families_dict[elements[0]] = elements[1].split('_')[0]"
    ]
@@ -345,6 +344,8 @@
     "group_prev = ''\n",
     "counter = 0\n",
     "for file_name in families:\n",
+    "    if not file_name.startswith('F'):\n",
+    "        continue\n",
     "    #if file_name != 'F01317 abducteur.txt':\n",
     "        #continue\n",
     "    family_id = file_name.split()[0]\n",
@@ -437,10 +438,10 @@
    "source": [
     "dot_dir = 'D-subposets'\n",
     "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
-    "if '.gitignore' in dot_files:\n",
-    "    dot_files.remove('.gitignore')\n",
     "counter = 0\n",
     "for dot_file in dot_files:\n",
+    "    if '.dot' not in dot_file:\n",
+    "        continue\n",
     "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
     "    counter += 1\n",
     "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
