--- a/DG_1.ipynb
+++ b/DG_1.ipynb
@@ -213,6 +213,8 @@
     "number_of_pairs = 0\n",
     "number_of_unique_pairs = 0\n",
     "for input_file in input_files:\n",
+    "    if '.csv' not in input_file:\n",
+    "        continue\n",
     "    with codecs.open(join(input_dir, input_file), 'r', encoding='utf-8') as f:\n",
     "        for line_num, line in enumerate(f):\n",
     "            if line_num == 0:\n",
@@ -363,6 +365,8 @@
    "outputs": [],
    "source": [
     "for input_file in input_files:\n",
+    "    if '.csv' not in input_file:\n",
+    "        continue\n",
     "    with codecs.open(join(input_dir, input_file), 'r', encoding='utf-8') as f:\n",
     "        for line_num, line in enumerate(f):\n",
     "            if line_num < 2:\n",
@@ -441,9 +445,9 @@
     "L = nx.DiGraph()\n",
     "family_dir = 'DG-families'\n",
     "family_files = [f for f in listdir(family_dir) if isfile(join(family_dir, f))]\n",
-    "if '.gitignore' in family_files:\n",
-    "    family_files.remove('.gitignore')\n",
     "for family_file in family_files:\n",
+    "    if '.txt' not in family_file:\n",
+    "        continue\n",
     "    group_id = family_file.split(' ')[0].split('-')[0]\n",
     "    if group_id != group_prec and group_prec != '':\n",
     "        f_summary.write(group_prec + '\\t' + str(len(L)) + '\\t' + str(L.size()) + '\\t' + str(family_count) + '\\t')\n",
@@ -518,10 +522,10 @@
    "source": [
     "dot_dir = 'DG-graph'\n",
     "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
-    "if '.gitignore' in dot_files:\n",
-    "    dot_files.remove('.gitignore')\n",
     "counter = 0\n",
     "for dot_file in dot_files:\n",
+    "    if '.dot' not in dot_file:\n",
+    "        continue\n",
     "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
     "    counter += 1\n",
     "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
