--- a/DG_2.ipynb
+++ b/DG_2.ipynb
@@ -197,10 +197,9 @@
    "source": [
     "input_dir = 'DG-graph-binary'\n",
     "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
-    "if '.gitignore' in input_files:\n",
-    "    input_files.remove('.gitignore')\n",
     "input_files.sort()\n",
-    "ignored = []\n",
+    "# ignored = []\n",
+    "ignored = ['F06513', 'F06517', 'F06569', 'F04681', 'F04999', 'F05047', 'F05148', 'F05151', 'F05959', 'F06063', 'F06314', 'F06360', 'F06404', 'F06370', 'F06423', 'F06445', 'F06452', 'F06456', 'F06458', 'F06465', 'F06476', 'F06477', 'F06478', 'F06497', 'F06072', 'F06502', 'F06533', 'F06558', 'F06129', 'F06560', 'F06600', 'F06602', 'F06603', 'F06625', 'F06629', 'F06635']\n",
     "for i in ignored:\n",
     "    try:\n",
     "        input_files.remove(i)\n",
@@ -242,6 +241,8 @@
     "counter = -1\n",
     "input_files_count = len(input_files)\n",
     "for subgraph in input_files:\n",
+    "    if not subgraph.startswith('F'):\n",
+    "        continue\n",
     "    subgroup_id = subgraph.split('-')[0]\n",
     "    if subgroup_id == subgroup_prev:\n",
     "        continue\n",
@@ -376,10 +377,10 @@
     "family_ids = context_with_header.index\n",
     "\n",
     "families = [f for f in listdir('DG-families') if isfile(join('DG-families', f))]\n",
-    "if '.gitignore' in families:\n",
-    "    families.remove('.gitignore')\n",
     "families_dict = dict()  # contains the representative word for a given family\n",
     "for f in families:\n",
+    "    if not f.startswith('F'):\n",
+    "        continue\n",
     "    elements = f.replace('.txt', '').split()\n",
     "    families_dict[elements[0]] = elements[1].split('_')[0]"
    ]
@@ -410,6 +411,8 @@
     "group_prev = ''\n",
     "counter = 0\n",
     "for file_name in families:\n",
+    "    if not file_name.startswith('F'):\n",
+    "        continue\n",
     "    #if file_name != 'F01317 abducteur.txt':\n",
     "        #continue\n",
     "    family_id = file_name.split()[0]\n",
@@ -502,10 +505,10 @@
    "source": [
     "dot_dir = 'DG-subposets'\n",
     "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
-    "if '.gitignore' in dot_files:\n",
-    "    dot_files.remove('.gitignore')\n",
     "counter = 0\n",
     "for dot_file in dot_files:\n",
+    "    if '.dot' not in dot_file:\n",
+    "        continue\n",
     "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
     "    counter += 1\n",
     "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
