--- a/D_3.ipynb
+++ b/D_3.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "full_extent_dict = dict()\n",
-    "with codecs.open(join('D-posets', 'aoc-full.dot'), 'r', encoding='utf-8') as f:\n",
+    "with codecs.open(join('D-posets', 'aoc_full.dot'), 'r', encoding='utf-8') as f:\n",
     "    for line in f:\n",
     "        if 'Attribute' in line:\n",
     "            full_extent_dict[line.split()[0]] = set(line.replace('Object ', '').split('|')[-1].split('\\\\n')[:-1])\n",
@@ -77,7 +77,7 @@
     "            break\n",
     "            \n",
     "L = nx.DiGraph()\n",
-    "with codecs.open(join('D-posets', 'aoc-simplified.dot'), 'r', encoding='utf-8') as f:\n",
+    "with codecs.open(join('D-posets', 'aoc_simplified.dot'), 'r', encoding='utf-8') as f:\n",
     "    for line in f:\n",
     "        if '->' in line:\n",
     "            v = line.split()\n",
@@ -311,7 +311,7 @@
    "source": [
     "L = nx.DiGraph()\n",
     "binary_dir = 'D-graph-binary'\n",
-    "with codecs.open(join('D-posets', 'aoc-simplified.dot'), 'r', encoding='utf-8') as f:\n",
+    "with codecs.open(join('D-posets', 'aoc_simplified.dot'), 'r', encoding='utf-8') as f:\n",
     "    for line in f:\n",
     "        if '->' in line:\n",
     "            v = line.split()\n",
